Prvni kroky v HTML a CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terka v IT</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <section id="header" class="header">
+    <header>
+<h1>Jsem Terka a hledám práci v IT</h1>
+    </header>
+
+</section>
+
+<section id="omne" class="omne">
+
+</section>
+
+<section id="hledam" class="hledam">
+
+
+</section>
+
+<section id="kontakt" class="kontakt">
+
+
+</section>
+</body>
+
+</html>
