Texty a novy design

--- a/index.html
+++ b/index.html
@@ -10,25 +10,65 @@
 
 <body>
     <section id="header" class="header">
-    <header>
-<h1>Jsem Terka a hledám práci v IT</h1>
-    </header>
+        <header>
+            <h1>Ahoj, jsem Terka a hledám práci v IT</h1>
+        </header>
 
-</section>
+    </section>
 
-<section id="omne" class="omne">
+    <nav class="menu">
+        <ul>
+            <li><a href="#omne">O mně</a></li>
+            <li><a href="#hledam">Co hledám</a></li>
+            <li><a href="#foto">Fotogalerie</a></li>
+            <li><a href="#kontakt">Kontakt</a></li>
+        </ul>
+    </nav>
 
-</section>
+    <section id="omne" class="omne">
+        <h2>Jmenuji se Tereza Haber a vzdělávám se v IT.</h2>
+        <p>Již při studiu na gymnázium jsem měla ráda hodiny "IVT", kde jsme si vytvářeli vlastní stránky, tehdy ještě
+            jen s použitím HTML. Když jsem pak chodila na vysokou školu, která s tímto neměla nic společného, ráda jsem
+            o víkendech navštěvovala kurzy Czechitas, z nich některé právě i na HTML a pro mě i nově CSS.
+        </p>
+        <p>Pak jsem si "odskočila" do úplně jiného života, kde jsem řešila plenky a obdivovala designy dětských hřišť.
+            Po tom,
+            co jsem cítila, že mohu zase na víkendy doma chybět, rozhodla jsem se pro Digitální akademii: Testování,
+            opět od Czechitas.
+            Říkala jsem si, jestli k full time práci a rodinnému životu si na sebe nenakládám zbytečně moc, protože se
+            nejedná jen
+            o víkendy 2x měsíčně v Praze, ale také spoustu večerních lekcí a samostudia. </p>
+        <p> Udělala jsem ale to nejlepší pro sebe. Digitální akademie byla od začátku jedna velká jízda. Pro mě jako
+            introverta
+            byl asi nejhorší první víkend, kdy jsme si musely sestavit týmy. V jedné místnosti téměř 35 žen které se
+            vidím poprvé
+            a vy máte pocit, že si vybíráte partnery na celý život, díky kterým můžete mít z akademie buď ty nejhezčí
+            vzpomínky
+            a nebo to budou 4 měsíce největšího pekla. Naštětsí jsem měla šťastnou ruku a jak jsme si podle sympatií
+            společně sedly do lavic
+            tak jsme se nakonec dohodly i na týmu. Holky mi byly velkou podporou po celou dobu akademie, i ve chvílích
+            kdy jsme nepracovaly na společném projektu.
+        </p>
 
-<section id="hledam" class="hledam">
+    </section>
+
+    <section id="hledam" class="hledam">
+        <h2>Hledám si novou práci</h2>
+        <p>Cílem tohoto mého malého projektu je přispět do svého CV něčím navíc, co by mi mohlo pomoci při výběrovém
+            řízení.
+        </p>
+
+    </section>
+
+    <section id="foto" class="id">
+<h2>Jak vidím IT svět svýma očima.</h2>
+
+    </section>
+
+    <section id="kontakt" class="kontakt">
 
 
-</section>
-
-<section id="kontakt" class="kontakt">
-
-
-</section>
+    </section>
 </body>
 
 </html>
